[gd_scene load_steps=2 format=3 uid="uid://c4orpco2rb63g"]

[ext_resource type="Script" path="res://ui/setting_menu.gd" id="1_xbnep"]

[node name="SettingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbnep")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.521569)

[node name="TabContainer" type="TabContainer" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -156.0
offset_right = 256.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28

[node name="Audio" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="Master" type="Control" parent="TabContainer/Audio"]
anchors_preset = 0
offset_left = 16.0
offset_top = 30.0
offset_right = 488.0
offset_bottom = 70.0

[node name="Label" type="Label" parent="TabContainer/Audio/Master"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Master"

[node name="MasterSlider" type="HSlider" parent="TabContainer/Audio/Master"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
step = 5.0
value = 100.0

[node name="BGM" type="Control" parent="TabContainer/Audio"]
anchors_preset = 0
offset_left = 16.0
offset_top = 70.0
offset_right = 488.0
offset_bottom = 110.0

[node name="Label" type="Label" parent="TabContainer/Audio/BGM"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "BGM"

[node name="BGMSlider" type="HSlider" parent="TabContainer/Audio/BGM"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
step = 5.0
value = 100.0

[node name="SFX" type="Control" parent="TabContainer/Audio"]
anchors_preset = 0
offset_left = 16.0
offset_top = 110.0
offset_right = 488.0
offset_bottom = 150.0

[node name="Label" type="Label" parent="TabContainer/Audio/SFX"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "SFX
"

[node name="SFXSlider" type="HSlider" parent="TabContainer/Audio/SFX"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
step = 5.0
value = 100.0

[node name="BackButton" type="Button" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -44.0
offset_right = 30.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 22
text = "Back"

[connection signal="mouse_entered" from="TabContainer/Audio/Master/MasterSlider" to="." method="button_hover_sfx"]
[connection signal="value_changed" from="TabContainer/Audio/Master/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="mouse_entered" from="TabContainer/Audio/BGM/BGMSlider" to="." method="button_hover_sfx"]
[connection signal="value_changed" from="TabContainer/Audio/BGM/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="mouse_entered" from="TabContainer/Audio/SFX/SFXSlider" to="." method="button_hover_sfx"]
[connection signal="value_changed" from="TabContainer/Audio/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="mouse_entered" from="TabContainer/Audio/BackButton" to="." method="button_hover_sfx"]
[connection signal="pressed" from="TabContainer/Audio/BackButton" to="." method="_on_back_button_pressed"]
